--- a/global.css
+++ b/global.css
@@ -1,4 +1,4 @@
-.mediaViewInfo {
+/*.mediaViewInfo {
 	--web-scale-to-fit: true;
 	--web-scale-to-fit-type: width;
 	--web-scale-on-resize: true;
@@ -12,7 +12,7 @@
 	border: none;
 	scroll-behavior: smooth;
 }
-#Landing, #Quiz, #Wash_Hands, #What_Can_I_do, #What_is_happening{
+#Landing, #Quiz, #Wash_Hands, #What_Can_I_do, #What_is_happening, #About{
 	position: absolute;
 	transform: translateX(-50%);
 	left: 50%;
@@ -23,9 +23,9 @@
 	--web-scale-on-resize: true;
 	--web-center-horizontally: true;
 	--web-enable-deep-linking: true;
-}
+}*/
 
-h1, h2, h3, h4, h5, p, span {
+h1, h2, h3, h4, h5, p, span, ul, li {
 	font-family: 'Montserrat', sans-serif;
 	color: rgba(112,112,112,1);
 	font-weight: 300;
@@ -56,7 +56,7 @@ h4 {
 
 }
 
-h5 {
+h5, ul, li {
 	font-size: 25px;
 }
 p {
