--- a/global.css
+++ b/global.css
@@ -12,7 +12,7 @@
 	border: none;
 	scroll-behavior: smooth;
 }
-#Landing, #Quiz, #Wash_Hands, #What_Can_I_do, #What_is_happening, #About{
+#Landing, #Quiz, #Wash_Hands, #What_Can_I_do, #What_is_happening{
 	position: absolute;
 	transform: translateX(-50%);
 	left: 50%;
@@ -25,7 +25,7 @@
 	--web-enable-deep-linking: true;
 }*/
 
-h1, h2, h3, h4, h5, p, span, ul, li {
+h1, h2, h3, h4, h5, p, span, ul {
 	font-family: 'Montserrat', sans-serif;
 	color: rgba(112,112,112,1);
 	font-weight: 300;
@@ -56,7 +56,7 @@ h4 {
 
 }
 
-h5, ul, li {
+h5, ul {
 	font-size: 25px;
 }
 p {
