--- a/index.css
+++ b/index.css
@@ -21,8 +21,8 @@
 	position: absolute;
 	transform: translateX(-50%);
 	left: 50%;
-	width: 100%;
-	height: 2400px;
+	width: 1280px;
+	height: 3000px;
 	overflow: hidden;
 	--web-view-name: Landing;
 	--web-view-id: Landing;
@@ -64,13 +64,39 @@
 	text-align: center;
 }
 
+#lifeomic-block {
+	position: absolute;
+	width: 100%;
+	height: 560px;
+	top: 2050px;
+	overflow: visible;
+	text-align: center;
+	background-color: #F8C757;
+}
+
+.lifeology-button {
+  background-color: white;
+  color: black;
+  padding: 20px;
+  text-align: center;
+  text-decoration: none;
+  margin: 4px 2px;
+  cursor: pointer;
+  width: 360px;
+  height: 400px;
+  border-radius: 75px;
+  box-shadow: 3px 6px rgba(0, 0, 0, 0.2);
+  top: 120px;
+  position: absolute;
+}
+
 #about_block {
 	position: absolute;
 	width: 100%;
 	height: 120px;
-	top: 2090px;
+	top: 2650px;
 	overflow: visible;
-	text-align: center;
+	text-align: left;
 }
 
 
@@ -427,6 +453,7 @@
 	--web-action-target: What_is_happening.html;
 	cursor: pointer;
 }
+
 
 #about_us_button {
 	display: block;
