--- a/What_is_happening.css
+++ b/What_is_happening.css
@@ -18,7 +18,7 @@
 #What_is_happening {
 	position: absolute;
 	width: 1280px;
-	height: 7500px;
+	height: 8060px;
 	background-color: rgba(255,255,255,1);
 	overflow: visible;
 	--web-view-name: What is happening;
@@ -55,23 +55,12 @@
 	top: 200px;
 	left: 60px;
 }
-#home-button-top {
-	position: absolute;
-	width: 83.099px;
-	height: 74.878px;
-	left: 40px;
-	top: 20px;
-	overflow: visible;
-	--web-animation: fadein 0.3s ease-out;
-	--web-action-type: page;
-	--web-action-target: Landing.html;
-	cursor: pointer;
-}
+
 
 #virus_block {
 	position: absolute;
 	width: 1281px;
-	height: 1284px;
+	height: 1840px;
 	left: -1px;
 	top: 2940px;
 	overflow: visible;
@@ -313,7 +302,7 @@
 	width: 1280px;
 	height: 1620px;
 	left: 0px;
-	top: 4220px;
+	top: 4780px;
 	overflow: visible;
 }
 .___97 {
@@ -506,26 +495,12 @@
     color: rgba(255,255,255,1);
 }
 
-#home-button-bottom {
-	position: absolute;
-	width: 94px;
-	height: 85px;
-	left: 47%;
-	top: 7400px;
-	overflow: visible;
-	--web-animation: fadein 0.3s ease-out;
-	--web-action-type: page;
-	--web-action-target: Landing.html;
-	cursor: pointer;
-}
-
-
 #economy_block {
 	position: absolute;
 	width: 1280px;
 	height: 1500px;
 	left: 0px;
-	top: 5840px;
+	top: 6400px;
 	overflow: visible;
 	background-color: rgba(255,208,91,1);
 }
@@ -605,3 +580,30 @@
 	font-size: 30px;
 	color: rgba(112,112,112,1);
 }
+
+#lifeomic-block {
+	position: absolute;
+	width: 100%;
+	height: 560px;
+	top: 4200px;
+	overflow: visible;
+	text-align: center;
+	background-color: none;
+}
+
+.lifeology-button {
+  background-color: white;
+  color: black;
+  padding: 20px;
+  text-align: center;
+  text-decoration: none;
+  margin: 4px 2px;
+  cursor: pointer;
+  width: 360px;
+  height: 400px;
+  border-radius: 75px;
+  box-shadow: 3px 6px rgba(0, 0, 0, 0.2);
+  top: 120px;
+  position: absolute;
+}
+
