--- a/global.css
+++ b/global.css
@@ -72,6 +72,14 @@ p {
 	width: 100px;
 	height: 80px;
 	}
+	
+#language-button-top {
+	position: absolute;
+	top: 20px;
+	left: 40px;
+	width: 100px;
+	height: 80px;
+	}
 
 #back-arrow-top {
 	position: absolute;
