--- a/index.css
+++ b/index.css
@@ -444,25 +444,28 @@
 	height: 60px;
 }
 
-#language-button-top {
-	position: absolute;
+
+
+.dropdown-container {
+	position: relative;
+	display: inline-block;
+	}
+
+.dropdown-container img {
 	top: 20px;
 	left: 40px;
 	width: 40px;
 	height: 40px;
 	}
 
-.dropdown-container {
-	position: absolute;
-	display: inline-block;
-	}
-.dropdown {
+.dropdown-container .dropdown {
 	position: absolute;
 	display: inline-block;
 	background-color: #555;
 	color: white;
 	}	
-.dropdown-content {
+
+.dropdown-container .dropdown-content {
 	display: none;
 	position: absolute;
 	background-color: #f1f1f1;
@@ -472,15 +475,15 @@
 	z-index: 1;
 	}
 
-.dropdown-content a {
+.dropdown-container .dropdown-content a {
 	color: black;
 	padding: 12px 16px;
 	text-decoration: none;
 	display: block;
 	}
 
-.dropdown-content a:hover {background-color: #ddd; border-radius: 25px;}
+.dropdown-container .dropdown-content a:hover {background-color: #ddd; border-radius: 25px;}
 
-.dropdown:hover .dropdown-content {display: block;}
+.dropdown-container .dropdown:hover .dropdown-content {display: block;}
 
-.dropdown:hover .dropbtn {background-color: #3e8e41;}
+.dropdown-container .dropdown:hover .dropbtn {background-color: #3e8e41;}
