--- a/index.css
+++ b/index.css
@@ -444,11 +444,8 @@
 	height: 60px;
 }
 
-
-
 .dropdown-container {
 	position: relative;
-	display: inline-block;
 	}
 
 .dropdown-container img {
@@ -482,8 +479,6 @@
 	display: block;
 	}
 
-.dropdown-container .dropdown-content a:hover {background-color: #ddd; border-radius: 25px;}
+.dropdown-content a:hover {background-color: #ddd; border-radius: 25px;}
 
-.dropdown-container .dropdown:hover .dropdown-content {display: block;}
-
-.dropdown-container .dropdown:hover .dropbtn {background-color: #3e8e41;}
+.dropdown:hover .dropdown-content {display: block;}
