--- a/index.css
+++ b/index.css
@@ -444,25 +444,22 @@
 	height: 60px;
 }
 
-.dropdown-container {
-	position: relative;
-	}
+.dropbtn {
+	background-color: #4CAF50;
+	color: white;
+	padding: 16px;
+	font-size: 16px;
+	border: none;
+  }
 
-.dropdown-container img {
-	top: 20px;
-	left: 40px;
-	width: 40px;
-	height: 40px;
-	}
-
-.dropdown-container .dropdown {
+.dropdown {
 	position: absolute;
 	display: inline-block;
 	background-color: #555;
 	color: white;
 	}	
 
-.dropdown-container .dropdown-content {
+.dropdown-content {
 	display: none;
 	position: absolute;
 	background-color: #f1f1f1;
@@ -472,13 +469,13 @@
 	z-index: 1;
 	}
 
-.dropdown-container .dropdown-content a {
+.dropdown-content a {
 	color: black;
 	padding: 12px 16px;
 	text-decoration: none;
 	display: block;
 	}
+.dropdown:hover .dropdown-content {display: block;}
 
-.dropdown-container .dropdown-content a:hover {background-color: #ddd; border-radius: 25px;}
+.dropdown-content a:hover {background-color: #ddd; border-radius: 25px;}
 
-.dropdown-container .dropdown:hover .dropdown-content {display: block;}
