--- a/index.css
+++ b/index.css
@@ -449,6 +449,13 @@
 	width: 100%;
   }
 
+  .language-button-top {
+	top: 20px;
+	left: 40px;
+	width: 40px;
+	height: 40px;
+  }
+
 .dropdown {
 	position: absolute;
 	display: inline-block;
