--- a/index.css
+++ b/index.css
@@ -459,8 +459,10 @@
 .dropdown {
 	position: absolute;
 	display: inline-block;
-	background-color: #555;
-	color: white;
+	top: 20px;
+	left: 40px;
+	width: 40px;
+	height: 40px;
 	}	
 
 .dropdown-content {
