Fixed sizing Language Button

--- a/index.css
+++ b/index.css
@@ -446,7 +446,10 @@
 
 .dropbtn {
 	position: relative;
-	width: 100%;
+	top: 20px;
+	left: 40px;
+	width: 40px;
+	height: 40px;
   }
 
   .language-button-top {
