--- a/index.css
+++ b/index.css
@@ -443,32 +443,34 @@
 #about_us_button .white-button-small{
 	height: 60px;
 }
-
-.dropbtn {
-	position: relative;
-	top: 20px;
-	left: 40px;
-	width: 40px;
-	height: 40px;
-  }
-
-  .language-button-top {
-	top: 20px;
-	left: 40px;
-	width: 40px;
-	height: 40px;
-  }
-
 .dropdown {
-	position: absolute;
-	display: inline-block;
-	top: 20px;
-	left: 40px;
-	width: 40px;
-	height: 40px;
+	position: relative;
+	width: 100%;
+	max-width: 40px;
 	}	
 
-.dropdown-content {
+.dropdown .dropbtn {
+	position: absolute;
+	top: 0%;
+	left: 0%;
+	width: 100%;
+	height: 100%;
+	opacity: 0;
+  }
+
+.dropdown .dropbtn:hover {
+	background-color: black;
+	opacity: 1;
+}
+
+.dropdown img {
+	top: 20px;
+	left: 40px;
+	width: 40px;
+	height: 40px;
+  }
+
+.dropdown .dropdown-content {
 	display: none;
 	position: absolute;
 	background-color: #f1f1f1;
@@ -487,5 +489,5 @@
 
 .dropdown:hover .dropdown-content {display: block;}
 
-.dropdown-content a:hover {background-color: #ddd; border-radius: 8px;}
+.dropdown .dropdown-content a:hover {background-color: #ddd; border-radius: 8px;}
 
