--- a/index.css
+++ b/index.css
@@ -458,11 +458,6 @@
 	opacity: 0;
   }
 
-.dropdown .dropbtn:hover {
-	background-color: black;
-	opacity: 1;
-}
-
 .dropdown .language-img {
 	top: 20px;
 	left: 40px;
@@ -476,8 +471,8 @@
 	background-color: #f1f1f1;
 	min-width: 80px;
 	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-	border-radius: 8px;
 	z-index: 1;
+	height:auto;
 	}
 
 .dropdown-content a {
@@ -487,7 +482,12 @@
 	display: block;
 	}
 
+.dropdown .dropbtn:hover {
+	background-color: black;
+	opacity: .3;
+}
+.dropdown .dropdown-content a:hover {background-color: #ddd; border-radius: 8px;}
+
 .dropdown:hover .dropdown-content {display: block;}
 
-.dropdown .dropdown-content a:hover {background-color: #ddd; border-radius: 8px;}
 
